--- a/style.css
+++ b/style.css
@@ -119,6 +119,10 @@ footer div.sociallinks div.links a{
     border-radius: 50%;
     padding: 10px;
 }
+footer div.sociallinks div.links a:hover{
+   opacity: 0.7;
+   
+}
 #copyright{
     background-color: rgba(59, 77, 84, 1);
     text-align: center;
@@ -129,4 +133,62 @@ footer div.sociallinks div.links a{
 }
 #copyright h4{
     margin-top: 15px;
+}
+main{
+    padding: 16px 120px;
+}
+main .heading{
+    display: block;
+    text-align: center;
+    padding: 16px;
+    
+}
+.heading h1{
+    text-transform: capitalize;
+}
+main .topics{
+   display: flex;
+   gap:20px;
+   flex-direction: row;
+ 
+   justify-content: space-between;
+
+
+}
+main .topics .topic {
+    box-shadow: 0 0 5px rgba(70, 67, 67,0.3);
+    padding: 16px;
+    margin-top: 20px;
+   text-align: center;
+}
+.topic:hover{
+    border: 1px solid rgba(70, 67, 67,0.3);
+}
+.topic img, h3, p{
+    padding: 5px;
+}
+main .topics .topic img{
+    background-color: #F95555;
+    padding: 10px;
+    border-radius: 50%;
+}
+#braining{
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+}
+#braining .righttexts ul li{
+    list-style-type: none;
+    padding-top: 10px;
+}
+.righttexts ul li img{
+  vertical-align: middle;
+  margin-right: 6px;
+   
+}
+.righttexts h4, h1, p, ul{
+    padding: 10px;
+}
+.righttexts h4{
+    color: rgb(87, 86, 86);
 }
