--- a/style.css
+++ b/style.css
@@ -1,194 +1,237 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto Condensed", sans-serif;
+}
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+h1,
+h2,
+h3,
+h4,
+h5 {
+  text-transform: capitalize;
 }
 nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 16px 120px;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 120px;
+  flex-direction: row;
+  align-items: center;
 }
-nav div.navlist ul{
-    display: flex;
-   
-
+nav div.navlist ul {
+  display: flex;
 }
-nav div.navlist ul li{
+nav div.navlist ul li {
   list-style-type: none;
-
 }
-nav div.navlist ul li a{
- margin: 0 28px;
- text-decoration: none;
- font-size: 16px;
- color: #000;
+nav div.navlist ul li a {
+  margin: 0 28px;
+  text-decoration: none;
+  font-size: 16px;
+  color: #000;
 }
-nav div.navlist ul li a:hover{
- text-decoration: underline;
-
+nav div.navlist ul li a:hover {
+  text-decoration: underline;
 }
-nav div.navbtn button{
-    padding: 12px 16px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
-    color: rgba(255, 255, 255, 1);
-    background-color: #30B868;
-    font-weight: 600;
+nav div.navbtn button {
+  padding: 12px 16px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  color: rgba(255, 255, 255, 1);
+  background-color: #30b868;
+  font-weight: 600;
 }
-nav div.navbtn button:hover{
-    background: transparent;
-    border: 1px solid #000;
-    color: #30B868;
-    cursor: pointer;
+nav div.navbtn button:hover {
+  background: transparent;
+  border: 1px solid #000;
+  color: #30b868;
+  cursor: pointer;
 }
-header section#hero{
-    background-image: url(./assets/hero-bg.png);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
- text-align: center;
- color: white;
-padding-top: 170px;
+header section#hero {
+  background-image: url(./assets/hero-bg.png);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  text-align: center;
+  color: white;
+  padding-top: 170px;
 }
-header section#hero button.early{
-     background: white;
-     padding: 10px 16px;
-     color: #30B868;
-     font-weight: 500;
-     align-items: center;
-     text-align: center;
-     border-radius: 20px;
-     justify-content: center;
-     border: none;
-
+header section#hero button.early {
+  background: white;
+  padding: 10px 16px;
+  color: #30b868;
+  font-weight: 500;
+  align-items: center;
+  text-align: center;
+  border-radius: 20px;
+  justify-content: center;
+  border: none;
 }
-header section#hero button.early i.fa-circle{
-    padding-right: 15px;
+header section#hero button.early i.fa-circle {
+  padding-right: 15px;
 }
 
-header section#hero h1{
-   font-size: 72px;
-   text-transform: capitalize;
-   padding: 10px;
+header section#hero h1 {
+  font-size: 72px;
+  text-transform: capitalize;
+  padding: 10px;
 }
-header section#hero p{
+header section#hero p {
   font-size: 18px;
   padding: 0 10px 10px 10px;
 }
-header section#hero div.herobtn button{
-    margin: 10px;
-    border-radius: 5px;
+header section#hero div.herobtn button {
+  margin: 10px;
+  border-radius: 5px;
   padding: 10px;
   border: none;
   text-align: center;
   cursor: pointer;
 }
-header section#hero div.herobtn button:hover{
-   opacity: 0.5;
+header section#hero div.herobtn button:hover {
+  opacity: 0.5;
+}
+header section#hero div.herobtn button.firstbtn {
+  background-color: #30b868;
+  color: white;
+}
+header section#hero div.herobtn button.secondbtn {
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+}
 
+main {
+  padding: 16px 120px;
 }
-header section#hero div.herobtn button.firstbtn{
-     background-color: #30B868;
-     color: white;
+main .heading {
+  display: block;
+  text-align: center;
+  padding: 16px;
 }
-header section#hero div.herobtn button.secondbtn{
- background-color: transparent;
- color: white;
- border: 1px solid white;
+.heading h1 {
+  text-transform: capitalize;
 }
-footer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 120px;
-    background-color: rgba(59, 77, 84, 1);
-    color: white;
-}
-footer div.sociallinks div.links{
-    margin-top: 15px;
-}
-footer div.sociallinks div.links a{
-   
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    background: white;
-    border-radius: 50%;
-    padding: 10px;
-}
-footer div.sociallinks div.links a:hover{
-   opacity: 0.7;
-   
-}
-#copyright{
-    background-color: rgba(59, 77, 84, 1);
-    text-align: center;
-    color: white;
-    display: block;
+main .topics {
+  display: flex;
+  gap: 20px;
+  flex-direction: row;
 
-   padding: 20px 120px;
-}
-#copyright h4{
-    margin-top: 15px;
-}
-main{
-    padding: 16px 120px;
-}
-main .heading{
-    display: block;
-    text-align: center;
-    padding: 16px;
-    
-}
-.heading h1{
-    text-transform: capitalize;
-}
-main .topics{
-   display: flex;
-   gap:20px;
-   flex-direction: row;
- 
-   justify-content: space-between;
-
-
+  justify-content: space-between;
 }
 main .topics .topic {
-    box-shadow: 0 0 5px rgba(70, 67, 67,0.3);
-    padding: 16px;
-    margin-top: 20px;
-   text-align: center;
+
+  box-shadow: 0 0 5px rgba(70, 67, 67, 0.3);
+  padding: 50px 16px;
+  margin-top: 20px;
+  text-align: center;
 }
-.topic:hover{
-    border: 1px solid rgba(70, 67, 67,0.3);
+.topic:hover {
+  border: 1px solid rgba(70, 67, 67, 0.3);
 }
-.topic img, h3, p{
-    padding: 5px;
+.topic img,
+h3,
+p {
+  padding: 5px;
 }
-main .topics .topic img{
-    background-color: #F95555;
-    padding: 10px;
-    border-radius: 50%;
+main .topics .topic img {
+  background-color: #f95555;
+  padding: 10px;
+  border-radius: 50%;
 }
-#braining{
-    display: flex;
-    align-items: center;
-    padding-top: 20px;
+#braining {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
 }
-#braining .righttexts ul li{
-    list-style-type: none;
-    padding-top: 10px;
+#braining .righttexts ul li {
+  list-style-type: none;
+  padding-top: 10px;
 }
-.righttexts ul li img{
+.righttexts ul li img {
   vertical-align: middle;
   margin-right: 6px;
-   
 }
-.righttexts h4, h1, p, ul{
-    padding: 10px;
+.righttexts h4,
+h1,
+p,
+ul {
+  padding: 10px;
 }
-.righttexts h4{
-    color: rgb(87, 86, 86);
+.righttexts h4 {
+  color: rgb(87, 86, 86);
+}
+#challenge {
+  background-color: #f7f6f2;
+  text-align: center;
+  padding: 50px 0;
+  margin: 60px 0;
+}
+#challenge .heading1 h2 {
+  font-size: 30px;
+}
+#challenge .heading1 p {
+  color: #646464;
+}
+#challenge h2,
+p,
+button {
+  padding: 10px;
+}
+.chbtn button {
+  padding: 12px 16px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  color: rgba(255, 255, 255, 1);
+  background-color: #30b868;
+  font-weight: 600;
+}
+.chbtn button img {
+  vertical-align: middle;
+  margin-right: 6px;
+  margin-left: 6px;
+}
+.chbtn button:hover {
+  background: #76e9a6;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 120px;
+  background-color: rgb(18, 31, 36);
+  color: white;
+}
+footer div.sociallinks div.links {
+  margin-top: 15px;
+}
+footer div.sociallinks div.links a {
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  background: white;
+  border-radius: 50%;
+  padding: 10px;
+}
+footer div.sociallinks div.links a:hover {
+  opacity: 0.7;
+}
+#copyright {
+  background-color: rgb(18, 31, 36);
+  text-align: center;
+  color: white;
+  display: block;
+
+  padding: 20px 120px;
+}
+#copyright h5 {
+  margin-top: 15px;
 }
